--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<ht lang="en">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -53,4 +53,4 @@
 
 </script>
 
-</ht>
+</html>
